style.css
body {
  padding: 13px;
  font-size: 13px;
  background: #ddd;
}

#dropzone {
  padding: 23px 5px 0 5px;
  border: 2px dotted #aaa;
  text-align: center;
  height: 70px;
  margin-bottom: 7px;
  background: #eee;
}

#dropzone.over {
  background: #ffd;
}

h4 {
  font-weight: bold;
}

#dropzone .nav {
  margin-top: 5px;
  text-align: right;
}

#dropzone .nav a {
  margin-left: 5px;
}

.select-encoding {
  margin-bottom: 10px;
  font-size: 13px;
  padding: 0 5px;
  line-height: 1em;
  height: 28px;
  background: #eee;
}

.select-encoding:disabled {
  color: #888;
}

.preview {
  font-size: 13px;
  padding: 5px;
  margin: 10px 0;
  resize: none;
}

.preview.unicode {
  background: #ffd;
}

.preview.over {
  border: 1px solid #59d;
}

#preview-from {
  height: 230px;
}

#preview-to {
  height: 200px;
}

.status {
  padding-top: 5px;
  font-size: 15px;
  text-align: right;
}

.status span {
  vertical-align: middle;
}

.save-col-left {
  padding-right: 4px;
}
.save-col-right {
  padding-left: 4px;
}

.icon-loading {
  display: inline-block;
  width: 24px;
  height: 24px;
  background: url(loading.png) no-repeat;
  -webkit-animation: play .8s infinite linear;
}

@-webkit-keyframes play {
    from {-webkit-transform: rotate(0deg);}
    to   {-webkit-transform: rotate(359deg);}
}

